<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hitachi_tstv.mist.it.pod_val_mitsu.TripActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/headerLinTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dateBtnTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Date"
                android:textSize="@dimen/txt_h3"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/middenLinTrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgDriverTrip"
                    android:layout_width="114dp"
                    android:layout_height="96dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/truckIdLblTrip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/truck_license"
                            android:textColor="@color/Black"
                            android:textSize="@dimen/txt_nm"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/truckIdValTrip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="AB-2222"
                            android:textColor="@color/Black"
                            android:textSize="@dimen/txt_nm" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/truckTypeLblTrip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:paddingRight="22dp"
                            android:text="@string/truck_type"
                            android:textColor="@color/Black"
                            android:textSize="@dimen/txt_nm"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/truckTypeValTrip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="18W"
                            android:textColor="@color/Black"
                            android:textSize="@dimen/txt_nm" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/driverNameLblTrip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:paddingRight="14dp"
                            android:text="@string/driver_name"
                            android:textColor="@color/Black"
                            android:textSize="@dimen/txt_nm"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/driverNameValTrip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="Mana "
                            android:textColor="@color/Black"
                            android:textSize="@dimen/txt_nm" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/tripListviewTrip"
                android:layout_width="match_parent"
                android:layout_height="343dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
